wallet_core/wallet_common/wallet_common_macros/tests/sentry_capture_error/fail_on_trait.rs
use wallet_common::sentry_capture_error;

#[sentry_capture_error]
trait Foo {}

fn main() {}
